# small_allocator

./: CMakeLists.txt  LICENSE  README.md  Utils.cpp  Utils.h  _Allocator.cpp  _Allocator.h  _FreeListManager.cpp  _FreeListManager.h  _MemoryBlock.h  allocator.cpp  allocator.h  allocator_test.cpp  defs.h  free_list.h  logging.h  main.cpp  memory.cpp  memory.h
test/: CMakeLists.txt  allocator_test.cpp  free_list_test.cpp
